--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -21,3 +21,5 @@ EXPOSE 8000
 
 # Default command to run the app
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
+# docker run -p 8000:8000 messaging_app
