--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL: ${MYSQL_USER}
+      MYSQL_DB: ${MYSQL_USER}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
